# Digamma

./: .gitignore  CMakeLists.txt  main.cpp
include/application/: Scene.hpp
include/geometry/factories/: SurfaceFactory.hpp
include/geometry/interfaces/: Serializable.hpp  Transformable.hpp
include/geometry/intersection/: AccelerationCache.hpp  IntersectionResult.hpp
include/geometry/kernel/: Aliases.hpp  Body.hpp  Ray.hpp  Surface.hpp
include/io/: AtomLoader.hpp  MaterialLoader.hpp  MoleculeLoader.hpp  loadAtom.hpp  writeOBJ.hpp
include/physics/entities/: Photon.hpp
include/physics/material/: Atom.hpp  Material.hpp  Molecule.hpp
include/physics/objects/: DGObject.hpp  Detector.hpp  RadiationSource.hpp
src/application/: Scene.cpp
src/geometry/factories/: SurfaceFactory.cpp
src/geometry/intersection/: AccelerationCache.cpp  IntersectionResult.cpp
src/geometry/kernel/: Body.cpp  Ray.cpp  Surface.cpp
src/io/: AtomLoader.cpp  MaterialLoader.cpp  MoleculeLoader.cpp  loadAtom.cpp  writeOBJ.cpp
src/physics/entities/: Photon.cpp
src/physics/material/: Atom.cpp  Material.cpp  Molecule.cpp
src/physics/objects/: DGObject.cpp  Detector.cpp  RadiationSource.cpp
